generated/checker-for-evaluation/generated/test-Memory-Leak-c8dafb0e4398dacc362832098a04b97da3b0395b/build_logs/7/build_error_log3.log
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:23,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h: In instantiation of ‘static void clang::ento::check::EndFunction::_checkEndFunction(void*, const clang::ReturnStmt*, clang::ento::CheckerContext&) [with CHECKER = {anonymous}::SAGenTestChecker]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:264:22:   required from ‘static void clang::ento::check::EndFunction::_register(CHECKER*, clang::ento::CheckerManager&) [with CHECKER = {anonymous}::SAGenTestChecker]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:516:22:   required from ‘static void clang::ento::Checker<CHECK1, CHECKs>::_register(CHECKER*, clang::ento::CheckerManager&) [with CHECKER = {anonymous}::SAGenTestChecker; CHECK1 = clang::ento::check::EndFunction; CHECKs = {clang::ento::check::Bind}]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:517:34:   required from ‘static void clang::ento::Checker<CHECK1, CHECKs>::_register(CHECKER*, clang::ento::CheckerManager&) [with CHECKER = {anonymous}::SAGenTestChecker; CHECK1 = clang::ento::check::PostCall; CHECKs = {clang::ento::check::EndFunction, clang::ento::check::Bind}]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:212:23:   required from ‘CHECKER* clang::ento::CheckerManager::registerChecker(AT&& ...) [with CHECKER = {anonymous}::SAGenTestChecker; AT = {}]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Frontend/CheckerRegistry.h:108:36:   required from ‘static void clang::ento::CheckerRegistry::initializeManager(MGR&) [with MGR = clang::ento::CheckerManager; T = {anonymous}::SAGenTestChecker]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Frontend/CheckerRegistry.h:132:15:   required from ‘void clang::ento::CheckerRegistry::addChecker(llvm::StringRef, llvm::StringRef, llvm::StringRef, bool) [with T = {anonymous}::SAGenTestChecker]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:154:40:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:257:49: error: no matching function for call to ‘{anonymous}::SAGenTestChecker::checkEndFunction(const clang::ReturnStmt*&, clang::ento::CheckerContext&) const’
  257 |     ((const CHECKER *)checker)->checkEndFunction(RS, C);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:104:6: note: candidate: ‘void {anonymous}::SAGenTestChecker::checkEndFunction(clang::ento::CheckerContext&) const’
  104 | void SAGenTestChecker::checkEndFunction(CheckerContext &C) const {
      |      ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:104:6: note:   candidate expects 1 argument, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:104:6: warning: ‘void {anonymous}::SAGenTestChecker::checkEndFunction(clang::ento::CheckerContext&) const’ defined but not used [-Wunused-function]
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
